# dagster-ibis

./: pyproject.toml
.github/workflows/: publish_dagster_ibis.yml  publish_dagster_ibis_bigquery.yml  publish_dagster_ibis_duckdb.yml
dagster_ibis/: __init__.py  client.py  io_manager.py  type_handler.py
dagster_ibis_tests/: test_init.py  test_io_manager.py
modules/dagster-ibis/: pyproject.toml
modules/dagster-ibis-duckdb/dagster_ibis_duckdb/: client.py
modules/dagster-ibis/dagster_ibis/: client.py  type_handler.py
