[project]
name = "dagster-ibis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "James Blackwell", email = "33688964+j-blackwell@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.10.6",
    "dagster-duckdb>=0.26.6",
    "ibis-framework[duckdb]>=10.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
duckdb = [
    "dagster-duckdb-pandas>=0.26.12",
    "ibis-framework[duckdb]>=10.3.1",
]
dev = [
    "pytest>=8.3.5",
]
