[project]
name = "dagster-ibis-repo"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
        "dagster-ibis",
        "dagster-ibis-duckdb",
        "dagster-ibis-bigquery",
]

[tool.uv.sources]
dagster-ibis = { workspace = true }
dagster-ibis-duckdb = { workspace = true }
dagster-ibis-bigquery = { workspace = true }

[tool.uv.workspace]
members = ["modules/*"]

[dependency-groups]
dev = [
        "dagster-ibis[dev]",
        "dagster-ibis-duckdb[dev]",
        "dagster-ibis-bigquery[dev]",
]
